# anyver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_versions.rs
python/anyver/: __init__.py  __init__.pyi
src/: lib.rs  parser.rs  python.rs  tests.rs
src/strategies/: mod.rs
tests/: test_anyver.py
tests/benchmarks/: test_bench.py
