[package]
name = "anyver"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lib]
name = "anyver"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
