[package]
name = "anyver"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"

[lib]
name = "anyver"
# cdylib is the shipped Python extension; rlib exists **only** so the
# Criterion benches under `benchmarks/` can link against this crate via the
# `bench`-gated `__bench` facade. The Rust API surface is intentionally
# `pub(crate)`; consume this project through its Python bindings.
crate-type = ["cdylib", "rlib"]

[dependencies]
# `abi3-py311` = one wheel per platform covers CPython 3.11, 3.12, 3.13, 3.14+
# via the stable ABI, eliminating per-interpreter build matrix drift.
pyo3 = { version = "0.28", features = ["abi3-py311"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[features]
# Exposes internal parser/comparator APIs via `anyver::__bench` so Criterion
# benches can call them without affecting the public surface.
bench = []

[[bench]]
name = "bench_versions"
path = "benchmarks/bench_versions.rs"
harness = false
required-features = ["bench"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
